# tirade

./: .gitignore  ANTI_MICRO_TRADING_SUMMARY.md  Cargo.toml  DATABASE_FIXES_SUMMARY.md  ML_TRADE_QUERY_SUMMARY.md  MULTIWALLET_SETUP.md  NEURAL_DASHBOARD_FEATURES.md  README.md  README_TESTING.md  README_query_trades_ml.md  TROUBLESHOOTING.md  check_trading_status.sh  clear_trading_data.sh  diagnose_transaction.sh  disable_neural.sh  env.example  init-database.sh  manage_screen.sh  query_closed_positions.sh  query_pnl_summary.sh  query_trades.sh  query_trades_ml.py  query_trades_ml.sh  quick_test.sh  reset_neural_network.sh  run-database.sh  start-tirade.sh  start_all.sh  start_all_screen.sh  start_dashboard.sh  start_terminal_dashboard.sh  stop-tirade.sh  stop_all.sh  stop_all_screen.sh  test_database_fixes.sh  test_logging.sh  test_simple_swap.rs  test_trading_scenario.sh  test_transaction.sh  test_usdc_flow.sh  (+2 more)
dashboard/: Cargo.toml
dashboard/src/: dashboard.html  main.rs  main.rs.backup
dashboard/static/: index.html
database-service/: Cargo.toml
database-service/src/: error.rs  indicators.rs  main.rs
logging-service/: Cargo.toml
logging-service/src/: main.rs
price-feed/: Cargo.toml
price-feed/src/: database.rs  main.rs  models.rs  price_feed.rs
simple-swap-test/: Cargo.toml
simple-swap-test/src/: main.rs
solana-trading-bot/: .gitignore  Cargo.toml  README.md
solana-trading-bot/price-feed/: Cargo.toml
solana-trading-bot/src/: main.rs
solana-trading-bot/src/api/: mod.rs
solana-trading-bot/src/config/: mod.rs
solana-trading-bot/src/error/: mod.rs
solana-trading-bot/src/transaction/: config.rs  error.rs  jupiter.rs  mod.rs  types.rs
solana-trading-bot/src/wallet/: mod.rs
trading-logic/: Cargo.toml  NEURAL_REFACTORING_SUMMARY.md  REFACTORING_SUMMARY.md  env.example  ml_config_example.env  simple_config_test.sh  test_multiwallet_config.rs
trading-logic/src/: config.rs  data_persistence.rs  database_service.rs  lib.rs  main.rs  ml_strategy.rs  models.rs  neural_enhancement.rs  position_manager.rs  signal_processor.rs  strategy.rs  tests.rs  trading_engine.rs  trading_executor.rs  (+1 more)
(+10 files in other folders)
