[package]
name = "simple-swap-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
dotenv = "0.15"
bs58 = "0.5"
solana-sdk = "1.17"

[[bin]]
name = "test_simple_swap"
path = "src/main.rs" 