[package]
name = "solana-trading-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.17"
solana-sdk = "1.17"
solana-program = "1.17"
spl-token = "4.0"
dotenv = "0.15"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
bs58 = "0.5" 