[package]
name = "solana-trading-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.17"
solana-sdk = "1.17"
solana-program = "1.17"
spl-token = "4.0"
dotenv = "0.15"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
bs58 = "0.5"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.21"
solana-account-decoder = "1.17" 